--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "miladrahimi/phprouter": "5.*",
-        "cloudinary/cloudinary_php": "^3.1"
+        "cloudinary/cloudinary_php": "^3.1",
+        "firebase/php-jwt": "^6.11"
     }
 }
